force-app/main/default/objects/Retention_Rule__mdt/Retention_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Retention Rule</label>
    <pluralLabel>Retention Rules</pluralLabel>
</CustomObject>