force-app/main/default/objects/Retention_Rule__mdt/fields/All_or_None__c.field-meta.xml
<CustomField>
    <fullName>All_or_None__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply the All or None Database Delete Operation</description>
    <label>All or None</label>
    <type>Checkbox</type>
</CustomField>