force-app/main/default/objects/Retention_Rule__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Retention_Rules</relationshipLabel>
    <relationshipName>Retention_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>