force-app/main/default/objects/Retention_Rule__mdt/fields/WHERE_Clause__c.field-meta.xml
<CustomField>
    <fullName>WHERE_Clause__c</fullName>
    <label>WHERE Clause</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>